--- a/src/presentation/components/Layout/Layout.module.scss
+++ b/src/presentation/components/Layout/Layout.module.scss
@@ -1,3 +1,16 @@
 body{
 	background-color: #458860;
 }
+
+.container {
+	background-color: #FFF;
+	border-radius: 2em;
+}
+
+.container {
+	p {
+ 		color: #5BB27E;
+		font-weight: normal;
+	}
+}
+
