feat(dashboard): design básico do dashboard

--- a/src/main.scss
+++ b/src/main.scss
@@ -24,3 +24,8 @@ $tom-shadow: 0 0 0 0.25rem #5BB27E80;
     background-color: $tom-1;
     border-color: $tom-1;
 }
+
+.bg-primary{
+	background-color: $tom-2 !important;
+	
+}
