--- a/src/presentation/pages/Orders/styles.module.scss
+++ b/src/presentation/pages/Orders/styles.module.scss
@@ -29,6 +29,12 @@
   margin-top: 1rem;
 }
 
+.container h5, h6{
+  margin: 0;
+  margin-top: 1rem;
+}
+
+
 .deleteBtn {
   background-color: #c32121;
   border: 0;
